--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
     font-weight: bold;
     font-size: 24px;
 }
+
+#date {
+    
+}
+
 .currentWStyle {
     font-weight: bold;
     font-size: 16px;
