--- a/style.css
+++ b/style.css
@@ -4,10 +4,18 @@
 }
 
 #date {
-    
+
 }
 
 .currentWStyle {
     font-weight: bold;
     font-size: 16px;
+}
+
+.curHumStyle {
+
+}
+
+.curWindStyle {
+
 }
