ch ch ch changes (turn and face the strange)

--- a/style.css
+++ b/style.css
@@ -3,12 +3,12 @@
     font-size: 24px;
 }
 
-#date {
+/* #date {
+    font-weight: bold;
 
-}
+} */
 
 .currentWStyle {
-    font-weight: bold;
     font-size: 16px;
 }
 
